doc/src/content/docs/0.1.x/api/command/pattern.mdx
---
title: Pattern
description: 計算した Emission パターンをデバイスへ送るコマンド
sidebar:
  order: 1
slug: 0.1.x/api/command/pattern
---

import CodeTabs from "@components/CodeTabs.astro";
import { Code } from "astro-expressive-code/components";

`Pattern` は, 各振動子の `Emission` をデバイスへ送るコマンド.

## API

<CodeTabs>
  <Fragment slot="rust">
    <Code code={"Pattern::new(&emissions);\n\nPattern::with_bank(bank, &emissions);\n\nPattern {\n    bank,\n    emissions: &emissions,\n};"} lang="rust" />

    `Pattern::new` は書き込み先バンクを `PatternBank::B0` とする.
    別バンクへ書く場合は `Pattern::with_bank(bank, emissions)` を使う.
  </Fragment>

  <Fragment slot="python">
    <Code code={"Pattern(emissions)\n\nPattern(\n    bank=bank,\n    emissions=emissions,\n)"} lang="python" />

    `Pattern` は書き込み先バンクをデフォルトで `PatternBank.B0` とする.
    別バンクを指定したい場合は `bank` 引数を渡す.
  </Fragment>

  <Fragment slot="csharp">
    <Code code={"new Pattern(emissions);\n\nnew Pattern(bank, emissions);"} lang="csharp" />

    `new Pattern(emissions)` は書き込み先バンクを `PatternBank.B0` とする.
    別バンクへ書く場合は `new Pattern(bank, emissions)` を使う.
  </Fragment>
</CodeTabs>

| フィールド        | 型                               | デフォルト                      | 説明                             |
| ----------------- | -------------------------------- | --------------------------- | -------------------------------- |
| `bank`            | `PatternBank`                    | `PatternBank::B0`           | 書き込み先・再生対象のバンク     |
| `emissions`       | `&[Vec<Emission>]` | —                           | デバイスごとの emission パターン |

patternの計算には幾つかの[ヘルパ関数](/autd3-sdk/0.1.x/api/compute/pattern/)が用意されている.

## 等価な低レベルコマンド

`Pattern` は内部で [WritePatternBuffer](/autd3-sdk/0.1.x/api/command/lowlevel/write-pattern-buffer/) + [ConfigPattern](/autd3-sdk/0.1.x/api/command/lowlevel/config-pattern/) + [ChangePatternBank](/autd3-sdk/0.1.x/api/command/lowlevel/change-pattern-bank/) の 3 つへ展開される.
以下は `Pattern { bank, emissions }` と等価な組み合わせである.

<CodeTabs rust={"WritePatternBuffer {\n    bank,\n    index: 0,\n    emissions,\n};\nConfigPattern {\n    bank,\n    config: SamplingConfig::new(NonZeroU16::MAX),\n    size: 1,\n    loop_behavior: LoopBehavior::Infinite,\n};\nChangePatternBank {\n    bank,\n    transition_mode: TransitionMode::Immediate,\n};"} python={"WritePatternBuffer(\n    bank=bank,\n    index=0,\n    emissions=emissions,\n)\nConfigPattern(\n    bank=bank,\n    config=SamplingConfig(0xFFFF),\n    size=1,\n    loop_behavior=LoopBehavior.Infinite,\n)\nChangePatternBank(\n    bank=bank,\n    transition_mode=TransitionMode.Immediate\n)"} csharp={"new WritePatternBuffer(\n    bank: bank,\n    index: 0,\n    emissions: emissions\n);\nnew ConfigPattern(\n    bank: bank,\n    config: new SamplingConfig(ushort.MaxValue),\n    size: 1,\n    loopBehavior: LoopBehavior.Infinite\n);\nnew ChangePatternBank(\n    bank: bank,\n    transitionMode: TransitionMode.Immediate\n);"} />

## Example

<CodeTabs rust={"use autd3_rs::commands::Pattern;\nuse autd3_rs::geometry::{Autd3, Geometry, offset};\nuse autd3_rs::units::{m, mm, s};\nuse autd3_rs::{Client, ClientConfig};\nuse autd3_rs_link_nop::Nop;\nuse autd3_rs_pattern::{FocusOption, focus, wavelength};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\nlet client = Client::open(&geometry, Nop, ClientConfig::default()).await?;\n\nlet mut emissions = geometry.pattern_buffer();\nfocus(\n    &geometry,\n    geometry.center() + offset(0.0 * mm, 0.0 * mm, 150.0 * mm),\n    wavelength(340.0 * m / s),\n    &FocusOption::default(),\n    &mut emissions,\n);\n\nlet mut builder = client.datagram_builder();\nbuilder.push(Pattern::new(&emissions));\nlet frames = builder.build()?;\nfor frame in &frames {\n    client.send_checked(frame).await?;\n}\n\nclient.close().await?;"} python={"import asyncio\n\nimport numpy as np\n\nfrom autd3 import Client, ClientConfig\nfrom autd3.commands import Pattern\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import m, s\nfrom autd3_link_nop import Nop\nfrom autd3_pattern import FocusOption, focus, wavelength\n\n\nasync def main() -> None:\n    geometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n    client = await Client.open(geometry, Nop(), ClientConfig())\n\n    emissions = geometry.pattern_buffer()\n    focus(\n        geometry,\n        geometry.center() + np.array([0.0, 0.0, 150.0]),\n        wavelength(340 * m / s),\n        FocusOption(),\n        emissions,\n    )\n\n    builder = client.datagram_builder()\n    builder.push(Pattern(emissions))\n    frames = builder.build()\n    for frame in frames:\n        await client.send_checked(frame)\n\n    await client.close()\n\n\nasyncio.run(main())"} csharp={"using System.Numerics;\nusing System.Threading.Tasks;\nusing AUTD3;\nusing AUTD3.Link;\nusing Nop = AUTD3.Link.Nop;\nusing static AUTD3.Units;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\nvar client = await Client.OpenAsync(geometry, new Nop(), new ClientConfig());\n\nvar emissions = geometry.PatternBuffer();\nPattern.Focus(\n    geometry,\n    geometry.Center + new Vector3(0.0f, 0.0f, 150.0f),\n    Pattern.Wavelength(340.0f * m / s),\n    new FocusOption(),\n    emissions\n);\n\nvar builder = client.DatagramBuilder();\nbuilder.Push(new Pattern(emissions));\nvar frames = builder.Build();\nforeach (var frame in frames)\n{\n    await client.SendCheckedAsync(frame);\n}\n\nawait client.CloseAsync();"} />
